--- a/Nico/Find-Items.css
+++ b/Nico/Find-Items.css
@@ -9,23 +9,23 @@
 .u-section-1 .u-text-1 {
   font-size: 3.75rem;
   text-shadow: 2px 2px 8px rgba(71,138,201,0.4);
-  margin: 103px 90px 0;
+  margin: 94px 90px 0;
 }
 
 .u-section-1 .u-text-2 {
   letter-spacing: 6px;
   font-size: 1.25rem;
-  width: 545px;
   text-transform: uppercase;
   font-weight: 600;
   text-shadow: 2px 2px 8px rgba(71,138,201,0.4);
   text-decoration: underline !important;
-  margin: 22px auto 0;
+  width: 545px;
+  margin: 21px auto 0;
 }
 
 .u-section-1 .u-list-1 {
   grid-template-rows: auto;
-  margin-top: 48px;
+  margin-top: 58px;
   margin-bottom: 60px;
 }
 
@@ -33,7 +33,6 @@
   grid-template-columns: calc(33.3333% - 20px) calc(33.3333% - 20px) calc(33.3333% - 20px);
   grid-gap: 30px 30px;
   min-height: 314px;
-  grid-auto-columns: calc(33.3333% - 20px);
 }
 
 .u-section-1 .u-list-item-1 {
@@ -50,13 +49,13 @@
   letter-spacing: 4px;
   text-transform: uppercase;
   font-weight: 500;
-  margin: 28px 15px 0;
+  margin: 29px 15px 0;
 }
 
 .u-section-1 .u-image-1 {
   width: 150px;
   height: 181px;
-  margin: 22px auto 0;
+  margin: 21px auto 0;
 }
 
 .u-section-1 .u-icon-1 {
@@ -80,13 +79,13 @@
   letter-spacing: 4px;
   text-transform: uppercase;
   font-weight: 500;
-  margin: 28px 15px 0;
+  margin: 29px 15px 0;
 }
 
 .u-section-1 .u-image-2 {
   width: 150px;
   height: 181px;
-  margin: 22px auto 0;
+  margin: 21px auto 0;
 }
 
 .u-section-1 .u-icon-2 {
@@ -111,13 +110,13 @@
   letter-spacing: 4px;
   text-transform: uppercase;
   font-weight: 500;
-  margin: 28px 15px 0;
+  margin: 29px 15px 0;
 }
 
 .u-section-1 .u-image-3 {
   width: 150px;
   height: 181px;
-  margin: 22px auto 0;
+  margin: 21px auto 0;
 }
 
 .u-section-1 .u-icon-3 {
@@ -143,9 +142,7 @@
   }
 
   .u-section-1 .u-repeater-1 {
-    grid-template-columns: repeat(3, calc(33.333333333333336% - 20px));
     min-height: 256px;
-    grid-auto-columns: calc(33.333333333333336% - 20px);
   }
 
   .u-section-1 .u-text-3 {
@@ -170,19 +167,14 @@
   }
 
   .u-section-1 .u-repeater-1 {
-    grid-template-columns: repeat(2, calc(50% - 15px));
+    grid-template-columns: calc(50% - 15px) calc(50% - 15px);
     min-height: 632px;
-    grid-auto-columns: calc(50% - 15px);
   }
 }
 
 @media (max-width: 767px) {
   .u-section-1 .u-text-2 {
     width: 540px;
-  }
-
-  .u-section-1 .u-repeater-1 {
-    grid-auto-columns: calc(100% - 0px);
   }
 
   .u-section-1 .u-container-layout-1 {
@@ -227,46 +219,42 @@
 
   .u-section-1 .u-repeater-1 {
     grid-template-columns: 100%;
-    grid-auto-columns: 100%;
   }
 } .u-section-2 {
   background-image: none;
 }
 
 .u-section-2 .u-sheet-1 {
-  min-height: 847px;
+  min-height: 820px;
 }
 
 .u-section-2 .u-text-1 {
-  text-shadow: 2px 2px 8px rgba(71,138,201,0.4);
   font-size: 3.75rem;
-  width: 809px;
-  margin: 55px auto 0;
+  text-shadow: 2px 2px 8px rgba(71,138,201,0.4);
+  margin: 94px 90px 0;
 }
 
 .u-section-2 .u-text-2 {
   letter-spacing: 6px;
+  font-size: 1.25rem;
   text-transform: uppercase;
   font-weight: 600;
   text-shadow: 2px 2px 8px rgba(71,138,201,0.4);
-  font-size: 1.25rem;
   text-decoration: underline !important;
-  margin: 36px 78px 0;
+  width: 545px;
+  margin: 21px auto 0;
 }
 
 .u-section-2 .u-list-1 {
   grid-template-rows: auto;
-  margin-top: 78px;
+  margin-top: 58px;
   margin-bottom: 60px;
-  height: auto;
-  min-height: 353px;
 }
 
 .u-section-2 .u-repeater-1 {
   grid-template-columns: calc(33.3333% - 20px) calc(33.3333% - 20px) calc(33.3333% - 20px);
-  min-height: 289px;
   grid-gap: 30px 30px;
-  grid-auto-columns: calc(33.3333% - 20px);
+  min-height: 402px;
 }
 
 .u-section-2 .u-list-item-1 {
@@ -274,29 +262,28 @@
 }
 
 .u-section-2 .u-container-layout-1 {
-  padding: 12px 7px;
+  padding: 13px 15px 2px;
 }
 
 .u-section-2 .u-text-3 {
   line-height: 1;
   font-size: 1.25rem;
-  font-weight: 500;
-  text-transform: uppercase;
   letter-spacing: 4px;
-  margin: 8px 13px 0;
+  text-transform: uppercase;
+  font-weight: 500;
+  margin: 29px 15px 0;
 }
 
 .u-section-2 .u-image-1 {
-  width: 243px;
+  width: 269px;
   height: 179px;
-  margin: 2px auto 0 48px;
+  margin: 51px auto 0;
 }
 
 .u-section-2 .u-icon-1 {
-  width: 64px;
-  height: 64px;
-  color: rgb(255, 255, 255) !important;
-  margin: 55px 0 0 auto;
+  width: 69px;
+  height: 69px;
+  margin: 30px 0 0 auto;
   padding: 6px;
 }
 
@@ -305,28 +292,28 @@
 }
 
 .u-section-2 .u-container-layout-2 {
-  padding: 12px 7px;
+  padding: 13px 15px 2px;
 }
 
 .u-section-2 .u-text-4 {
   line-height: 1;
   font-size: 1.25rem;
-  font-weight: 500;
-  text-transform: uppercase;
   letter-spacing: 4px;
-  margin: 8px 13px 0;
+  text-transform: uppercase;
+  font-weight: 500;
+  margin: 29px 15px 0;
 }
 
 .u-section-2 .u-image-2 {
-  width: 243px;
+  width: 269px;
   height: 179px;
-  margin: 2px auto 0 48px;
+  margin: 51px auto 0;
 }
 
 .u-section-2 .u-icon-2 {
-  width: 64px;
-  height: 64px;
-  margin: 55px 0 0 auto;
+  width: 69px;
+  height: 69px;
+  margin: 30px 0 0 auto;
   padding: 6px;
 }
 
@@ -335,50 +322,47 @@
 }
 
 .u-section-2 .u-container-layout-3 {
-  padding: 12px 7px;
+  padding: 13px 15px 2px;
 }
 
 .u-section-2 .u-text-5 {
   line-height: 1;
   font-size: 1.25rem;
-  font-weight: 500;
-  text-transform: uppercase;
   letter-spacing: 4px;
-  margin: 8px 13px 0;
+  text-transform: uppercase;
+  font-weight: 500;
+  margin: 29px 15px 0;
 }
 
 .u-section-2 .u-image-3 {
-  width: 243px;
+  width: 269px;
   height: 179px;
-  margin: 2px auto 0 48px;
+  margin: 51px auto 0;
 }
 
 .u-section-2 .u-icon-3 {
-  width: 64px;
-  height: 64px;
-  color: rgb(255, 255, 255) !important;
-  margin: 55px 0 0 auto;
+  width: 69px;
+  height: 69px;
+  margin: 30px 0 0 auto;
   padding: 6px;
 }
 
 @media (max-width: 1199px) {
   .u-section-2 .u-sheet-1 {
-    min-height: 794px;
+    min-height: 630px;
   }
 
-  .u-section-2 .u-text-2 {
-    margin-left: 0;
+  .u-section-2 .u-text-1 {
     margin-right: 0;
+    margin-left: 0;
   }
 
   .u-section-2 .u-list-1 {
-    min-height: 300px;
+    height: auto;
   }
 
   .u-section-2 .u-repeater-1 {
-    grid-template-columns: repeat(3, calc(33.333333333333336% - 20px));
-    min-height: 236px;
-    grid-auto-columns: calc(33.333333333333336% - 20px);
+    min-height: 328px;
   }
 
   .u-section-2 .u-text-3 {
@@ -386,71 +370,31 @@
     margin-right: 0;
   }
 
-  .u-section-2 .u-image-1 {
-    margin-top: 21px;
-    margin-left: auto;
-  }
-
-  .u-section-2 .u-icon-1 {
-    margin-top: 36px;
-  }
-
   .u-section-2 .u-text-4 {
     margin-left: 0;
     margin-right: 0;
-  }
-
-  .u-section-2 .u-image-2 {
-    margin-top: 21px;
-    margin-left: auto;
-  }
-
-  .u-section-2 .u-icon-2 {
-    margin-top: 36px;
   }
 
   .u-section-2 .u-text-5 {
     margin-left: 0;
     margin-right: 0;
   }
-
-  .u-section-2 .u-image-3 {
-    margin-top: 21px;
-    margin-left: auto;
-  }
-
-  .u-section-2 .u-icon-3 {
-    margin-top: 36px;
-  }
 }
 
 @media (max-width: 991px) {
   .u-section-2 .u-sheet-1 {
-    min-height: 1143px;
-  }
-
-  .u-section-2 .u-text-1 {
-    width: 720px;
-  }
-
-  .u-section-2 .u-list-1 {
-    min-height: 649px;
+    min-height: 903px;
   }
 
   .u-section-2 .u-repeater-1 {
-    grid-template-columns: repeat(2, calc(50% - 15px));
-    min-height: 585px;
-    grid-auto-columns: calc(50% - 15px);
+    grid-template-columns: calc(50% - 15px) calc(50% - 15px);
+    min-height: 802px;
   }
 }
 
 @media (max-width: 767px) {
-  .u-section-2 .u-text-1 {
+  .u-section-2 .u-text-2 {
     width: 540px;
-  }
-
-  .u-section-2 .u-repeater-1 {
-    grid-auto-columns: calc(100% - 0px);
   }
 
   .u-section-2 .u-container-layout-1 {
@@ -470,14 +414,30 @@
 }
 
 @media (max-width: 575px) {
+  .u-section-2 .u-sheet-1 {
+    min-height: 1138px;
+  }
+
   .u-section-2 .u-text-1 {
-    font-size: 2.25rem;
-    width: 340px;
-    margin-top: 74px;
+    font-size: 1.875rem;
+    width: auto;
+    margin-top: 45px;
+    margin-right: 210px;
+  }
+
+  .u-section-2 .u-text-2 {
+    font-size: 1.125rem;
+    width: auto;
+    margin-top: -22px;
+    margin-right: 0;
+    margin-left: 155px;
+  }
+
+  .u-section-2 .u-list-1 {
+    margin-top: 40px;
   }
 
   .u-section-2 .u-repeater-1 {
     grid-template-columns: 100%;
-    grid-auto-columns: 100%;
   }
 }
